Add Phase 2: Stripe, Plaid, documents, maintenance, tenant portal
- Add banking app with Stripe Connect and Plaid integration
- Add documents app with S3 presigned URL uploads
- Add maintenance app for request tracking
- Add tenant portal app with token-based auth
- Add Celery configuration for background tasks
- Add payment reminder and late fee tasks
- Update settings with new apps and configurations

--- a/requirements.txt
+++ b/requirements.txt
@@ -30,3 +30,13 @@ pytest-cov>=4.1,<5.0
 
 # Development
 ipython>=8.20,<9.0
+
+# Phase 2 - Payments & Banking
+stripe>=8.0,<9.0
+plaid-python>=15.0,<16.0
+
+# Phase 2 - Background Tasks
+celery>=5.3,<6.0
+redis>=5.0,<6.0
+django-celery-beat>=2.5,<3.0
+django-celery-results>=2.5,<3.0
