--- a/requirements.txt
+++ b/requirements.txt
@@ -40,3 +40,7 @@ celery>=5.3,<6.0
 redis>=5.0,<6.0
 django-celery-beat>=2.5,<3.0
 django-celery-results>=2.5,<3.0
+
+# Production
+gunicorn>=21.2,<22.0
+whitenoise>=6.6,<7.0
